plugins/kotlin/idea/tests/testData/multiModuleHighlighting/multiplatform/additionalMembersInPlatformInterface/a_js_dep(stdlib)/js.kt
actual interface A
actual interface B {
    fun z()
    fun x()
}

<error descr="[ABSTRACT_MEMBER_NOT_IMPLEMENTED]">class Impl</error> : Both {
    override fun z() {
    }
}